--- a/style2.css
+++ b/style2.css
@@ -72,13 +72,18 @@ footer,header,hgroup,menu,nav,section {
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    text-decoration: none;
     background-color: #ffc400;
     line-height: 81px;
 }
-
+.text a{
+    color: #111;
+    text-transform: uppercase;
+    text-decoration: none;
+}
 .text a:hover {
     color:white;
-    transform: scale(1.1);    
+    transform: scale(1.3);    
 }
 
 /*center column*/
@@ -143,7 +148,6 @@ span {
 
 .container {
     display: flex;
-    flex-direction: column-wise;
     width:1050px;
     justify-content: center;
     margin-left: 100px;
@@ -152,7 +156,6 @@ span {
 
 .contleft {
     display: flex;
-    flex-direction: column-wise;
     width: 60%;
     background-color:black;
     height:340px;
@@ -163,12 +166,17 @@ span {
     flex-direction: column;
     width:50%;
     text-align: center ;
+    border-right: 0.5px solid #ccc;
+    height: 85%;
+    margin:auto 0;
     
 }
 .one {
     width: 100%;
-    border-bottom: 1px solid #ccc;
-    border-radius: 30px;
+    border-bottom: 0.5px solid #ccc;
+    width: 85%;
+    margin:0px auto;
+
     
 }
 .two{
@@ -181,27 +189,29 @@ span {
     flex-direction: column;
     width:50%;
     text-align: center;
-    border-left: 1px solid #ccc;
+    border-left: 0.5px solid #ccc;
+    height: 85%;
+    margin: auto 0px;
+
 
 }
 
 .three{
     width:100%;
+    border-bottom: 0.5px solid #ccc;
+    width: 85%;
+    margin:0px auto;
 
 }
 
 .four{
     width:100%;
-    border-top: 1px solid #ccc;
-    border-radius: 30px;
 }
 
 h3 {
     font-size: 60px;
-    padding-top: 45px;
-    color:#ffc400
-
-   
+    padding-top: 35px;
+    color:#ffc400; 
 }
 
 p {
